Alignment bug fix.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -172,6 +172,7 @@ body {
 	padding: 4em 0;
 }
 .article, .menu-item {
+	padding: 1px;
 	clear: both;
 	small {
 		color: @color-swatch5;
@@ -403,7 +404,7 @@ a {
 	}
 }
 .menu-section-item-dietary-props {
-	padding-bottom: 1.5em;
+	padding-bottom: 3em;
 	.dietary-icon {
 		position: relative;
 		background: @color-swatch1;
